# ddetector

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
examples/config_examples/: conservative_config.json  lband_config.json
src/ddetector/: __init__.py  cli.py  core.py  detection.py  io_utils.py  visualization.py
tests/: test_detection.py
